--- a/health/templates/health/includes/drugs-app/template.html
+++ b/health/templates/health/includes/drugs-app/template.html
@@ -1,90 +1,112 @@
-
-<div class="card" id="drugs-app">
+<div id="accordion-drugs" class="rtl text-right farsi">
+  <div class="card" id="drugs-app">
     <div class="card-header">
-        <h4>
-            دارو ها
+      <h5 class="text-center">
+        <button
+          class="btn btn-link"
+          data-toggle="collapse"
+          data-target="#collapse-drugs"
+          aria-expanded="true"
+          aria-controls="collapse-drugs"
+        >
+          دارو ها
 
-            <small>(
-                <span v-text="drugs.length"></span>
-                )</small>
-        </h4>
+          <span v-if="drugs.length>0">
+            <small class="text-danger mx-2">
+              <span v-text="drugs.length"></span>
+            </small>
+          </span>
+        </button>
+      </h5>
     </div>
-    <div class="card-body">
+    <div
+      id="collapse-drugs"
+      class="collapse {% if expand_drugs %} show {% endif %}"
+      aria-labelledby="heading-drugs"
+      data-parent="#accordion-drugs"
+    >
+      <div class="card-body">
         <div class="my-2">
-            <input type="text" class="form-control" v-model="search_for" @input="filter()">
+          <input
+            type="text"
+            class="form-control"
+            v-model="search_for"
+            @input="filter()"
+          />
         </div>
-        
+
         <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
-                    <th>
-                        نام
-                    </th>
+          <table class="table table-striped">
+            <thead>
+              <th>نام</th>
 
+              <th>بارکد</th>
 
-                    <th>
-                        بارکد
-                    </th>
+              <th>قیمت</th>
 
+              <th></th>
+            </thead>
+            <tbody>
+              <tr v-for="drug in drugs">
+                <td>
+                  <a :href="drug.get_absolute_url">
+                    <div class="media">
+                      <img
+                        :src="drug.thumbnail"
+                        width="48"
+                        class="rounded"
+                        alt=""
+                      />
+                      <div class="media-body mr-2">
+                        <h5 v-text="drug.title"></h5>
+                      </div>
+                    </div>
+                  </a>
+                </td>
+                <td>
+                  <a :href="drug.get_absolute_url">
+                    <span
+                      :class="'text-'+drug.color"
+                      v-text="drug.barcode"
+                    ></span>
+                  </a>
+                </td>
 
+                <td>
+                  <h6>
+                    هر
+                    <span v-text="drug.unit_name"> </span>
+                    <span v-text="to_price(drug.unit_price)"> </span>
+                    {{CURRENCY}}
+                  </h6>
+                </td>
 
-                    <th>
-                        قیمت
-                    </th>
-
-
-                    <th>
-
-                    </th>
-                </thead>
-                <tbody>
-                    <tr v-for="drug in drugs">
-
-                        <td>
-                            <a :href="drug.get_absolute_url">
-                                <div class="media">
-                                    <img :src="drug.thumbnail" width="48" class="rounded" alt="">
-                                    <div class="media-body mr-2">
-                                        <h5 v-text="drug.title"></h5>
-                                        
-                                    </div>
-                                </div>
-
-                            </a>
-
-                        </td>
-                        <td>
-                            <a :href="drug.get_absolute_url">
-                                <span :class="'text-'+drug.color" v-text="drug.barcode"></span>
-                            </a>
-                        </td>
-
-                        <td>
-                            <h6>
-                                هر
-                                <span v-text="drug.unit_name"> </span>
-                                <span v-text="to_price(drug.unit_price)"> </span>
-                                {{CURRENCY}}
-                            </h6>
-                        </td>
-
-
-                        <td>
-                            {% if perms.accounting.change_fooditem %}
-                            <a :href="drug.get_edit_url" class="my-2 text-warning mx-2" title="ویرایش"
-                                target="_blank">
-                                <i class="fa fa-edit text-warning"></i>
-                            </a>
-                            {% endif %}
-                            {% if perms.accounting.delete_fooditem %}
-                            <a :href="drug.get_delete_url" class="my-2 text-danger mx-2" title="حذف" target="_blank">
-                                <i class="fa fa-trash text-danger"></i>
-                            </a>
-                            {% endif %}
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                <td>
+                  {% if perms.accounting.change_fooditem %}
+                  <a
+                    :href="drug.get_edit_url"
+                    class="my-2 text-warning mx-2"
+                    title="ویرایش"
+                    target="_blank"
+                  >
+                    <i class="fa fa-edit text-warning"></i>
+                  </a>
+                  {% endif %} {% if perms.accounting.delete_fooditem %}
+                  <a
+                    :href="drug.get_delete_url"
+                    class="my-2 text-danger mx-2"
+                    title="حذف"
+                    target="_blank"
+                  >
+                    <i class="fa fa-trash text-danger"></i>
+                  </a>
+                  {% endif %}
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+      </div>
     </div>
+  </div>
 </div>
