--- a/health/templates/health/includes/add-drug-app/template.html
+++ b/health/templates/health/includes/add-drug-app/template.html
@@ -1,87 +1,94 @@
 <div id="accordion-add-drug" class="rtl text-right farsi">
-
-    <div class="card" id="add-drug-app">
-        <div class="card-header">
-            <h5 class="text-center">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-add-drug"
-                    aria-expanded="true" aria-controls="collapse-add-drug">
-                    افزودن داروی جدید
-
-
-                </button>
-            </h5>
-
-        </div>
-<div
+  <div class="card" id="add-drug-app">
+    <div class="card-header">
+      <h5 class="text-center">
+        <button
+          class="btn btn-link"
+          data-toggle="collapse"
+          data-target="#collapse-add-drug"
+          aria-expanded="true"
+          aria-controls="collapse-add-drug"
+        >
+          افزودن داروی جدید
+        </button>
+      </h5>
+    </div>
+    <div
       id="collapse-add-drug"
-      class="collapse  "
+      class="collapse"
       aria-labelledby="heading-add-drug"
       data-parent="#accordion-add-drug"
     >
-        <div class="card-body">
-            <div  >
-                <form @submit.prevent="add_drug()">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">نام آیتم غذایی</label>
-                                <input type="text" class="form-control" v-model="title">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">بارکد</label>
-                                <input type="text" class="form-control" v-model="barcode">
-                            </div>
-                        </div>
+      <div class="card-body">
+        <div>
+          <form @submit.prevent="add_drug()">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="">نام دارو</label>
+                  <input type="text" class="form-control" v-model="title" />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="">بارکد</label>
+                  <input type="text" class="form-control" v-model="barcode" />
+                </div>
+              </div>
 
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">ضریب</label>
-                                <input type="number" class="form-control" v-model="coef">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">نام واحد</label>
-                                <select name="" class="form-control" v-model="unit_name">
-                                    {% for unit_name in unit_names_for_add_invoice_line_item %}
-                                    <option value="{{unit_name}}">{{unit_name}}</option>
-                                    {% endfor %}
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="">ضریب</label>
+                  <input type="number" class="form-control" v-model="coef" />
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="">نام واحد</label>
+                  <select name="" class="form-control" v-model="unit_name">
+                    {% for unit_name in unit_names_for_add_invoice_line_item %}
+                    <option value="{{unit_name}}">{{unit_name}}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for=""
+                    >قیمت
+                    <small
+                      class="text-muted"
+                      v-text="to_price(unit_price)"
+                    ></small>
+                    <small class="text-muted">{{CURRENCY}}</small>
+                  </label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    v-model="unit_price"
+                  />
+                </div>
+              </div>
+              <div class="col-md-4"></div>
+              <div class="col-md-4"></div>
+              <div class="col-md-12">
+                <button type="submit" class="btn btn-success">
+                  <i class="fa fa-plus ml-2"></i>افزودن
+                </button>
 
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">قیمت
-                                    <small class="text-muted" v-text="to_price(unit_price)"></small>
-                                    <small class="text-muted">{{CURRENCY}}</small>
-                                </label>
-                                <input type="number" class="form-control" v-model="unit_price">
-                            </div>
-                        </div>
-                        <div class="col-md-4"></div>
-                        <div class="col-md-4"></div>
-                        <div class="col-md-12">
-                            <Button type="submit" class="btn btn-success">
-                                <i class="fa fa-plus ml-2"></i>افزودن
-                            </Button>
-                            
-                            <div>
-                                <div v-if="message.show" class="my-2">
-                                    <div :class="'alert alert-'+message.color">
-                                        <h5 v-html="message.title"></h5>
-                                        <div v-html="message.body"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                <div>
+                  <div v-if="message.show" class="my-2">
+                    <div :class="'alert alert-'+message.color">
+                      <h5 v-html="message.title"></h5>
+                      <div v-html="message.body"></div>
                     </div>
-                </form>
+                  </div>
+                </div>
+              </div>
             </div>
+          </form>
         </div>
+      </div>
     </div>
-
-</div>
+  </div>
 </div>
